<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/web_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/name_holder">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_website"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/web_holder">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:hint="@string/description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/apply_status"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/desc_holder"
        android:layout_marginTop="16dp"
        android:entries="@array/apply_status"
        android:padding="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_company"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/purple_200"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>