<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.example.applyhistory.db.Company" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@{item.companyName}"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:textSize="17sp"
                    android:background="@drawable/light_gray_round_rectangle_with_border"
                    app:layout_constraintTop_toBottomOf="@id/company_name_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_web_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/company_website"
                    app:layout_constraintTop_toBottomOf="@id/company_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_web"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:textSize="17sp"
                    android:text="@{item.companyWebSite}"
                    android:background="@drawable/light_gray_round_rectangle_with_border"
                    app:layout_constraintTop_toBottomOf="@id/company_web_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/company_website"
                    app:layout_constraintTop_toBottomOf="@id/company_web" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/light_gray_round_rectangle_with_border"
                    android:text="@{item.description}"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:textSize="17sp"
                    android:minHeight="100dp"
                    app:layout_constraintTop_toBottomOf="@id/description_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/apply_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/apply_status"
                    app:layout_constraintTop_toBottomOf="@id/description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/apply_status"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    app:statusName="@{item.applyStatus}"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:textSize="17sp"
                    android:background="@drawable/light_gray_round_rectangle_with_border"
                    app:layout_constraintTop_toBottomOf="@id/apply_status_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/delete_company"
            app:layout_constraintBottom_toTopOf="@id/update_btn"
            android:background="@color/purple_200"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/purple_200"
            android:text="@string/edit_company"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>